--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.1",
+    "latest-version": "^7.0.0",
     "npm": "^9.2.0",
     "popper": "^1.0.1",
     "rxjs": "~7.5.0",
